--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
                         </ul>
                     </div>
                 </nav>
-                <div class="jumbotron"></div>
+                <div class="jumbotron w-50">
+                    <div class="jumbotron-title">
+                        <h1>Scegli l'inglese studiato per i professionisti</h1>
+                        <a href="#" class="btn btn-green btn-big">struttura un piano</a>
+                    </div>
+                </div>
             </div>
         </header>
         <!-- /header -->
