--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <title>Fluentify</title>
     </head>
     <body>
         <!-- header -->
-        <header>
+        <header class="page-header">
             <div class="container">
                 <nav class="clearfix">
                     <div class="header-logo float-left">
-                        <img src="img/logo.svg" alt="logo">
+                        <a href="#" class="home-page">
+                            <img src="img/logo.svg" alt="logo">
+                        </a>
                     </div>
                     <div class="nav-left float-left">
                         <ul class="list-inline">
@@ -59,7 +61,49 @@
 
         <!-- main -->
         <main>
+            <header class="main-header">
+                <div class="container">
+                    <h3>Le scuole di lingua tradizionali non sono efficaci</h3>
+                    <h4 class="subtitle">Solo un corso incentrato sulla Fluency pu<span>&ograve;</span> portare ad una soluzione definitiva concreta.</h4>
+                </div>
+            </header>
 
+            <section class="main-section-1">
+                <div class="container clearfix">
+                    <div class="col float-left w-33">
+                        <img src="img/profile.svg" alt="Profile">
+                        <h2 class="title-green">Piano formativo configurato sul proprio livello</h2>
+                        <hr>
+                        <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
+                    </div>
+
+                    <div class="col float-left w-33">
+                        <img src="img/computer.svg" alt="Computer">
+                        <h2 class="title-green">Affiancamento costante del tutor</h2>
+                        <hr>
+                        <p>Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.</p>
+                    </div>
+
+                    <div class="col float-left w-33">
+                        <img src="img/doc.svg" alt="Doc">
+                        <h2 class="title-green">Monitora i tuoi progressi costantemente</h2>
+                        <hr>
+                        <p>Controlla i tuoi progressi con i dati elaborati dal nostro sistema. Hai il pieno controllo sui miglioramenti e obiettivi raggiunti.</p>
+                    </div>
+                </div>
+            </section>
+
+            <hr>
+
+            <section class="main-section-2 container clearfix">
+                <div class="col w-50 float-left">
+                    <img src="img/mountain.svg" alt="Mountain">
+                </div>
+
+                <div class="col w-50 float-left">
+                    <h2>Scopri il tuo livello iniziale e struttura un piano personalizzato</h2>
+                </div>
+            </section>
         </main>
         <!-- /main -->
 
