--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
         <title>Fluentify</title>
     </head>
     <body>
@@ -55,6 +56,9 @@
                         <a href="#" class="btn btn-green btn-big">struttura un piano</a>
                     </div>
                 </div>
+                <div class="help-btn">
+                    <a href="#" class="btn btn-green">help</a>
+                </div>
             </div>
         </header>
         <!-- /header -->
@@ -101,7 +105,11 @@
                 </div>
 
                 <div class="col w-50 float-left">
-                    <h2>Scopri il tuo livello iniziale e struttura un piano personalizzato</h2>
+                    <div class="col-50-title">
+                        <h2>Scopri il tuo livello iniziale e struttura un piano personalizzato</h2>
+                        <p>L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.</p>
+                        <a href="#">Scopri il nostro test di placement</a>
+                    </div>
                 </div>
             </section>
         </main>
@@ -109,7 +117,26 @@
 
         <!-- footer -->
         <footer>
+            <div class="container clearfix">
+                <div class="float-left">
+                    <h2 class="footer-title">Struttura un piano</h2>
+                </div>
 
+                <div class="footer-nav">
+                    <ul class="list-inline">
+                        <li>Sono</li>
+                        <li>
+                            <span class="select">
+                                <span>Seleziona</span>
+                                <i class="fas fa-sort-down"></i>
+                            </span>
+                        </li>
+                        <li>
+                           <a href="#" class="btn btn-green btn-big">Visualizza il tuo piano</a> 
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </footer>
         <!-- /footer -->
     </body>
