--- a/index.html
+++ b/index.html
@@ -66,29 +66,27 @@
         <!-- main -->
         <main>
             <header class="main-header">
-                <div class="container">
-                    <h3>Le scuole di lingua tradizionali non sono efficaci</h3>
-                    <h4 class="subtitle">Solo un corso incentrato sulla Fluency pu<span>&ograve;</span> portare ad una soluzione definitiva concreta.</h4>
-                </div>
+                <h3>Le scuole di lingua tradizionali non sono efficaci</h3>
+                <h4 class="subtitle">Solo un corso incentrato sulla Fluency pu<span>&ograve;</span> portare ad una soluzione definitiva concreta.</h4>
             </header>
 
             <section class="main-section-1">
                 <div class="container clearfix">
-                    <div class="col float-left w-33">
+                    <div class="col float-left w-30">
                         <img src="img/profile.svg" alt="Profile">
                         <h2 class="title-green">Piano formativo configurato sul proprio livello</h2>
                         <hr>
                         <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
                     </div>
 
-                    <div class="col float-left w-33">
+                    <div class="col col-center float-left w-30">
                         <img src="img/computer.svg" alt="Computer">
                         <h2 class="title-green">Affiancamento costante del tutor</h2>
                         <hr>
                         <p>Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.</p>
                     </div>
 
-                    <div class="col float-left w-33">
+                    <div class="col float-left w-30">
                         <img src="img/doc.svg" alt="Doc">
                         <h2 class="title-green">Monitora i tuoi progressi costantemente</h2>
                         <hr>
@@ -100,11 +98,11 @@
             <hr>
 
             <section class="main-section-2 container clearfix">
-                <div class="col w-50 float-left">
+                <div class="w-50 float-left">
                     <img src="img/mountain.svg" alt="Mountain">
                 </div>
 
-                <div class="col w-50 float-left">
+                <div class="w-50 float-left">
                     <div class="col-50-title">
                         <h2>Scopri il tuo livello iniziale e struttura un piano personalizzato</h2>
                         <p>L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.</p>
@@ -118,8 +116,8 @@
         <!-- footer -->
         <footer>
             <div class="container clearfix">
-                <div class="float-left">
-                    <h2 class="footer-title">Struttura un piano</h2>
+                <div class="footer-title">
+                    <h2>Struttura un piano</h2>
                 </div>
 
                 <div class="footer-nav">
